@@ -306,7 +306,7 @@ extern int parse_image(void **dest, slurm_parser_enum_t type,
 	if(tmp) {
 		for(i=0; i<strlen(tmp); i++) {
 			if(tmp[i] == ':') {
-				image_group = xmalloc(sizeof(image_group));
+				image_group = xmalloc(sizeof(image_group_t));
 				image_group->name = xmalloc(i-j+2);
 				snprintf(image_group->name,
 					 (i-j)+1, "%s", tmp+j);
@@ -320,7 +320,7 @@ extern int parse_image(void **dest, slurm_parser_enum_t type,
 			} 		
 		}
 		if(j != i) {
-			image_group = xmalloc(sizeof(image_group));
+			image_group = xmalloc(sizeof(image_group_t));
 			image_group->name = xmalloc(i-j+2);
 			snprintf(image_group->name, (i-j)+1, "%s", tmp+j);
 			image_group->gid = gid_from_string(image_group->name);
